<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo App</string>
    <string name="button_add">Add</string>
    <string name="button_clear_all">Clear All</string>
    <string name="hint_type_here">Type Here</string>
    <string name="switch_urgent">Urgent</string>
    <string name="header_title">CST2335 Lab 4</string>
    <string name="dialog_title">Do you want to delete this?</string>
    <string name="dialog_message">The selected row is: </string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="enter_task">Please enter a task</string>
</resources>



